--- a/src/Header/components/AddTask/AddTask.module.css
+++ b/src/Header/components/AddTask/AddTask.module.css
@@ -4,11 +4,18 @@
 }
 
 .colorBlock {
+    box-sizing: border-box;
     width: 30px;
     height: 30px;
     border-radius: 8px;
-}
 
+}
+.colorBlock:hover{
+    border: 2px solid blue;
+}
+.colorBlockBorder{
+    border: 2px solid blue;
+}
 .category {
     border: 2px solid #9C89B8;
     border-radius: 7px;
