--- a/src/Body/Body.module.css
+++ b/src/Body/Body.module.css
@@ -6,4 +6,11 @@
     margin-bottom: 12px;
     border-radius: 8px;
     padding:10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.btnContainer{
+    display: flex;
+    gap: 20px;
 }
