--- a/src/ModalWindow/ModalWindow.module.css
+++ b/src/ModalWindow/ModalWindow.module.css
@@ -9,7 +9,12 @@
     justify-content: center;
     align-items: center;
 z-index: 100;
+
+
 }
+/*body{*/
+/*    overflow: hidden;*/
+/*}*/
 
 .container {
     width: 320px;
