--- a/src/Body/Body.module.css
+++ b/src/Body/Body.module.css
@@ -14,3 +14,15 @@
     display: flex;
     gap: 20px;
 }
+.wrapperStatus{
+    display: flex;
+}
+.newTask{
+    border: 1px solid blue;
+}
+.inWorkTask{
+    border: 1px solid yellow;
+}
+.doneTask{
+    border: 1px solid red;
+}
