TaskManager By NIKITAbynikita

--- a/src/Body/Body.module.css
+++ b/src/Body/Body.module.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    /*overflow-x:scroll ;*/
+    width: 100%;
 }
 .container>span{
     border: 1px solid grey;
