--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: space-between;
     padding: 10px;
+    flex-direction: row-reverse;
+    align-items: center;
 }
 
 .container svg{
