--- a/src/ModalWindow/ModalWindow.module.css
+++ b/src/ModalWindow/ModalWindow.module.css
@@ -3,7 +3,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    position: absolute;
+    position: fixed;
     background-color: rgba(21, 12, 12, 0.65);
     display: flex;
     justify-content: center;
