TaskManager By NIKITA pochtiGotovo

--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -1,14 +1,13 @@
-.container{
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    flex-direction: row-reverse;
-    align-items: center;
-}
-
 .container svg{
     display: flex;
     justify-content: space-between;
     padding: 10px;
     cursor: pointer;
+}
+.header{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    flex-direction: row-reverse;
+    align-items: center;
 }
