TaskManager by Nikita mb done

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,9 @@
 /*.app{*/
 /*    border: 1px solid ;*/
 /*}*/
+.knopka {
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+}
